syntax = "proto3";

package clientToTask;

import "google/protobuf/duration.proto";

option go_package="github.com/nikhs247/objectDetection/comms/rpc/clientToTask";

    service rpcClientToTask {
        rpc RTT_Request(TestPerf) returns (PerfData) {}
        rpc Probe_Request(TestPerf) returns (ProbeResult) {}
        rpc Join_Request(Decision) returns (JoinResult) {}
        rpc UnexpectedClientJoin(EmptyMessage) returns (EmptyMessage) {}
        rpc EndProcess(EmptyMessage) returns (EmptyMessage) {}
        rpc TestPerformance(TestPerf) returns (PerfData) {}
        rpc SendRecvImage(stream ImageData) returns (stream ProcessResult) {}
    }

    message TestPerf {
        string clientID = 2;
    }

    message PerfData {
        google.protobuf.Duration procTime  = 1;
    }

    message ProbeResult {
        int64 stateNumber = 1;
        google.protobuf.Duration whatIfTime  = 2;
    }

    message Decision {
        int64 lastSate = 1;
    }

    message JoinResult {
        bool success = 1;
    }

    message EmptyMessage {

    }

    message ImageData {   
        int32 width = 1;
        int32 height = 2;
        int32 matType = 3;
        bytes image = 4;
        int32 start = 5;
        string clientID = 6;
    }

    message ProcessResult {
        int32   responseCode = 1;
        string  result = 2;
    }